--- a/Edited website/css/et-line.css
+++ b/Edited website/css/et-line.css
@@ -98,7 +98,7 @@
 .et-icon-upload,
 .et-icon-video,
 .et-icon-wallet,
-.et-icon-wine{font-family:et-line;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;display:inline-block}
+.et-icon-wine{font-family:et-line;speak:never;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;display:inline-block}
 .et-icon-mobile:before{content:"\e000"}
 .et-icon-laptop:before{content:"\e001"}
 .et-icon-desktop:before{content:"\e002"}
